--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -17,6 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="76dp"
+            style="@style/MainTitle600"
             android:layout_marginEnd="16dp"
             android:text="@string/menu_create"
             android:textColor="@color/blackText"
