--- a/app/src/main/res/layout/fragment_instruments.xml
+++ b/app/src/main/res/layout/fragment_instruments.xml
@@ -19,6 +19,7 @@
             android:layout_marginTop="76dp"
             android:layout_marginEnd="16dp"
             android:text="@string/menu_instruments"
+            style="@style/MainTitle600"
             android:textColor="@color/white"
             android:textSize="28sp"
             android:textStyle="bold"
