--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -13,7 +13,7 @@
 
         <TextView
             android:id="@+id/title"
-            style="@style/PrimaryTitle"
+            style="@style/MainTitle600"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -41,6 +41,8 @@
                 android:text="@string/what_are_you_now"
                 android:textColor="@color/white"
                 android:textSize="@dimen/font_normal"
+                android:textStyle="bold"
+                android:fontFamily="@font/montserrat_regular"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -62,6 +64,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="36dp"
+
             android:layout_marginEnd="16dp"
             android:text="@string/we_recommend_you"
             app:layout_constraintEnd_toEndOf="parent"
