--- a/app/src/main/res/layout/slide_item_container.xml
+++ b/app/src/main/res/layout/slide_item_container.xml
@@ -10,6 +10,7 @@
         android:id="@+id/tvMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat_regular"
         android:gravity="center"
         android:textColor="@color/white"
         android:textSize="26sp"
@@ -20,6 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/montserrat_regular"
         android:gravity="center"
         android:textColor="@color/white"
         android:textSize="16sp" />
