--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,6 +28,7 @@
     <style name="CollectionTitle" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">@color/blackText</item>
+        <item name="fontFamily">@font/montserrat_medium</item>
     </style>
 
     <style name="LevelText" parent="Widget.AppCompat.TextView">
@@ -83,5 +84,22 @@
         <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">bold</item>
     </style>
+
+    //Font Styles
+    <style name="ButtonsTextWeight500" parent="AppTheme">
+        <item name="android:textSize">16sp</item>
+        <item name="fontFamily">@font/montserrat_medium</item>
+    </style>
+
+    <style name="MainTitle600" parent="AppTheme">
+        <item name="android:textSize">28sp</item>
+        <item name="fontFamily">@font/montserrat_medium</item>
+    </style>
+
+    <style name="Regular400" parent="AppTheme">
+        <item name="android:textSize">16sp</item>
+        <item name="fontFamily">@font/montserrat_regular</item>
+    </style>
+
 
 </resources>
