--- a/app/src/main/res/layout/item_creation.xml
+++ b/app/src/main/res/layout/item_creation.xml
@@ -12,6 +12,7 @@
         style="@style/CollectionTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat_regular"
         android:layout_marginStart="16dp"
         android:layout_marginTop="36dp"
         android:textColor="@color/blackText"
