--- a/app/src/main/res/layout/item_audio_track.xml
+++ b/app/src/main/res/layout/item_audio_track.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:fontFamily="@font/montserrat_regular"
         android:lines="1"
         android:textColor="@color/blackText"
         android:textSize="14sp"
@@ -37,6 +38,7 @@
         android:id="@+id/duration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/montserrat_regular"
         android:textColor="@color/blackText"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
