--- a/app/src/main/res/layout/item_mood.xml
+++ b/app/src/main/res/layout/item_mood.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_marginStart="8dp"
+        android:fontFamily="@font/montserrat_regular"
         android:maxLines="1"
         android:text="@string/menu_create"
         android:textColor="@color/black"
