--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -191,6 +191,7 @@
                     android:textSize="10sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/speakerVoiceIcon"
                     app:layout_constraintTop_toBottomOf="@id/speakerTitle" />
             </androidx.constraintlayout.widget.ConstraintLayout>
