--- a/app/src/main/res/layout/item_audio_track.xml
+++ b/app/src/main/res/layout/item_audio_track.xml
@@ -12,7 +12,7 @@
         android:id="@+id/controlView"
         android:layout_width="42dp"
         android:layout_height="42dp"
-        android:background="@drawable/ic_play"
+        android:background="@drawable/ic_play_rounded"
         android:elevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
