--- a/app/src/main/res/layout/fragment_change_language.xml
+++ b/app/src/main/res/layout/fragment_change_language.xml
@@ -19,18 +19,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16sp"
-                android:layout_marginTop="76dp"
+                android:layout_marginTop="32dp"
                 android:src="@drawable/ic_back_black"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/title"
-                style="@style/RegularTextSize20"
+                style="@style/MainTitle600"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="36dp"
-                android:layout_marginTop="76dp"
+                android:layout_marginTop="32dp"
                 android:text="@string/txt_change_language"
                 app:layout_constraintStart_toEndOf="@id/btnBack"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -52,6 +52,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:button="@drawable/radio_button"
+                    android:fontFamily="@font/montserrat_regular"
                     android:paddingHorizontal="12dp"
                     android:text="@string/kazakh_language" />
 
@@ -62,6 +63,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
                     android:button="@drawable/radio_button"
+                    android:fontFamily="@font/montserrat_regular"
                     android:paddingHorizontal="12dp"
                     android:text="@string/russian_language" />
             </RadioGroup>
@@ -80,7 +82,9 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="57dp"
             android:background="@drawable/bg_blue_button"
+            android:fontFamily="@font/montserrat_regular"
             android:text="@string/txt_apply"
+            android:textColor="@color/white"
             android:textSize="17sp" />
     </RelativeLayout>
 </FrameLayout>
