--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -19,18 +19,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16sp"
-                android:layout_marginTop="76dp"
+                android:layout_marginTop="32dp"
                 android:src="@drawable/ic_back_black"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/title"
-                style="@style/RegularTextSize20"
+                style="@style/MainTitle600"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="36dp"
-                android:layout_marginTop="76dp"
+                android:layout_marginTop="32dp"
                 android:text="@string/change_password"
                 app:layout_constraintStart_toEndOf="@id/btnBack"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -50,6 +50,7 @@
                     style="@style/SmallRegularTextSize14"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_regular"
                     android:text="@string/enter_current_password" />
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -57,6 +58,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:background="@drawable/bg_edittext_stroke"
+                    android:fontFamily="@font/montserrat_regular"
                     android:padding="4dp"
                     app:boxStrokeColor="@color/black"
                     app:hintEnabled="false"
@@ -68,6 +70,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@null"
+                        android:fontFamily="@font/montserrat_regular"
                         android:hint="@string/enter_your_password"
                         android:padding="4dp"
                         android:paddingStart="8dp"
@@ -79,6 +82,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="42dp"
+                    android:fontFamily="@font/montserrat_regular"
                     android:text="@string/create_new_pass" />
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -86,6 +90,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:background="@drawable/bg_edittext_stroke"
+                    android:fontFamily="@font/montserrat_regular"
                     android:padding="4dp"
                     app:boxStrokeColor="@color/black"
                     app:hintEnabled="false"
@@ -97,6 +102,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@null"
+                        android:fontFamily="@font/montserrat_regular"
                         android:hint="@string/enter_your_password"
                         android:padding="4dp"
                         android:paddingStart="8dp"
@@ -109,6 +115,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
+                    android:fontFamily="@font/montserrat_regular"
                     android:text="@string/reply_new_pass" />
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -127,6 +134,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@null"
+                        android:fontFamily="@font/montserrat_regular"
                         android:hint="@string/enter_your_password"
                         android:padding="4dp"
                         android:paddingStart="8dp"
@@ -148,8 +156,10 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="57dp"
             android:background="@drawable/bg_blue_button"
+            android:fontFamily="@font/montserrat_regular"
             android:text="@string/save_password"
             android:textAllCaps="false"
+            android:textColor="@color/white"
             android:textSize="17sp" />
     </RelativeLayout>
 </FrameLayout>
