--- a/app/src/main/res/layout/fragment_faq.xml
+++ b/app/src/main/res/layout/fragment_faq.xml
@@ -19,18 +19,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16sp"
-                android:layout_marginTop="76dp"
+                android:layout_marginTop="32dp"
                 android:src="@drawable/ic_back_black"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/title"
-                style="@style/RegularTextSize20"
+                style="@style/MainTitle600"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="36dp"
-                android:layout_marginTop="76dp"
+                android:layout_marginTop="32dp"
                 android:text="@string/txt_faq"
                 app:layout_constraintStart_toEndOf="@id/btnBack"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -49,6 +49,7 @@
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/about"
                     style="@style/StandartTextSize16"
+                    android:fontFamily="@font/montserrat_regular"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/what_is_mentalmind"
@@ -57,6 +58,7 @@
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/aboutDescription"
                     style="@style/SmallRegularTextSize14"
+                    android:fontFamily="@font/montserrat_regular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
@@ -66,6 +68,7 @@
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/whatIsInstruments"
                     style="@style/StandartTextSize16"
+                    android:fontFamily="@font/montserrat_regular"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
@@ -75,6 +78,7 @@
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/aboutInstruments"
                     style="@style/SmallRegularTextSize14"
+                    android:fontFamily="@font/montserrat_regular"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
@@ -86,6 +90,7 @@
                     style="@style/StandartTextSize16"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_regular"
                     android:layout_marginTop="32dp"
                     android:text="@string/how_long"
                     app:drawableEndCompat="@drawable/ic_array_down" />
@@ -94,6 +99,7 @@
                     android:id="@+id/aboutHowLong"
                     style="@style/SmallRegularTextSize14"
                     android:layout_width="wrap_content"
+                    android:fontFamily="@font/montserrat_regular"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="@string/about_how_long"
@@ -103,6 +109,7 @@
                     android:id="@+id/whatResult"
                     style="@style/StandartTextSize16"
                     android:layout_width="match_parent"
+                    android:fontFamily="@font/montserrat_regular"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="32dp"
                     android:text="@string/how_to_know"
@@ -112,6 +119,7 @@
                     android:id="@+id/aboutResult"
                     style="@style/SmallRegularTextSize14"
                     android:layout_width="wrap_content"
+                    android:fontFamily="@font/montserrat_regular"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="@string/about_result"
