--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -22,7 +22,7 @@
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/title"
-            style="@style/RegularTextSize20"
+            style="@style/MainTitle600"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="36dp"
@@ -46,6 +46,7 @@
             <androidx.appcompat.widget.AppCompatTextView
                 style="@style/SmallRegularTextSize14"
                 android:layout_width="wrap_content"
+                android:fontFamily="@font/montserrat_regular"
                 android:layout_height="wrap_content"
                 android:text="@string/txt_name" />
 
@@ -54,6 +55,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:fontFamily="@font/montserrat_regular"
                 android:background="@drawable/bg_edittext_stroke"
                 android:hint="@string/enter_name"
                 android:inputType="text"
@@ -67,6 +69,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
+                android:fontFamily="@font/montserrat_regular"
                 android:text="@string/txt_birth_date" />
 
             <androidx.appcompat.widget.AppCompatEditText
@@ -78,6 +81,7 @@
                 android:hint="@string/enter_birth_date"
                 android:inputType="text"
                 android:paddingStart="12dp"
+                android:fontFamily="@font/montserrat_regular"
                 android:paddingTop="14dp"
                 android:paddingEnd="12dp"
                 android:paddingBottom="14dp" />
@@ -87,6 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
+                android:fontFamily="@font/montserrat_regular"
                 android:text="@string/country" />
 
             <androidx.appcompat.widget.AppCompatEditText
@@ -105,6 +110,7 @@
             <androidx.appcompat.widget.AppCompatTextView
                 style="@style/SmallRegularTextSize14"
                 android:layout_width="wrap_content"
+                android:fontFamily="@font/montserrat_regular"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:text="@string/city" />
@@ -118,6 +124,7 @@
                 android:hint="@string/choose_from_list"
                 android:inputType="text"
                 android:paddingStart="12dp"
+                android:fontFamily="@font/montserrat_regular"
                 android:paddingTop="14dp"
                 android:paddingEnd="12dp"
                 android:paddingBottom="14dp" />
@@ -127,6 +134,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="52dp"
+                android:fontFamily="@font/montserrat_regular"
                 android:background="@drawable/bg_green_button"
                 android:drawableEnd="@drawable/ic_array_right_white"
                 android:gravity="start|center_vertical"
@@ -149,6 +157,7 @@
             android:text="@string/save_changes"
             android:textAllCaps="false"
             android:textSize="17sp"
+            android:fontFamily="@font/montserrat_regular"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
