--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,17 +17,20 @@
     <style name="EnterButtonText" parent="TextAppearance.AppCompat.Widget.Button">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/colorStrongGray</item>
+        <item name="android:fontFamily">@font/montserrat_regular</item>
     </style>
 
     <style name="PrimaryTitle" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">28sp</item>
         <item name="android:textColor">@color/blackText</item>
+        <item name="android:fontFamily">@font/montserrat_regular</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="CollectionTitle" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">@color/blackText</item>
+        <item name="android:fontFamily">@font/montserrat_regular</item>
         <item name="fontFamily">@font/montserrat_medium</item>
     </style>
 
@@ -35,70 +38,89 @@
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/montserrat_regular</item>
     </style>
 
     <style name="SecondaryTitleText" parent="AppTheme">
         <item name="android:textSize">28sp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/montserrat_regular</item>
     </style>
 
     <style name="ExtraSmallTextSize12" parent="AppTheme">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/montserrat_regular</item>
     </style>
 
     <style name="ExtraSmallGrayTextSize12" parent="AppTheme">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/colorStrongGray</item>
+        <item name="android:fontFamily">@font/montserrat_regular</item>
     </style>
 
     <style name="SmallTextSize14" parent="AppTheme">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/montserrat_regular</item>
     </style>
 
     <style name="SmallRegularTextSize14" parent="AppTheme">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/colorStrongGray</item>
+        <item name="android:fontFamily">@font/montserrat_regular</item>
     </style>
 
     <style name="StandartTextSize16" parent="AppTheme">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/montserrat_regular</item>
     </style>
 
     <style name="MediumTitleTextSize18" parent="AppTheme">
         <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/montserrat_regular</item>
         <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="RegularTextSize20" parent="AppTheme">
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/montserrat_regular</item>
     </style>
 
     <style name="RegularBoldTextSize20" parent="AppTheme">
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">@font/montserrat_regular</item>
     </style>
 
     //Font Styles
     <style name="ButtonsTextWeight500" parent="AppTheme">
         <item name="android:textSize">16sp</item>
         <item name="fontFamily">@font/montserrat_medium</item>
+        <item name="android:fontFamily">@font/montserrat_regular</item>
     </style>
 
     <style name="MainTitle600" parent="AppTheme">
         <item name="android:textSize">28sp</item>
         <item name="fontFamily">@font/montserrat_medium</item>
+        <item name="android:fontFamily">@font/montserrat_regular</item>
     </style>
 
     <style name="Regular400" parent="AppTheme">
         <item name="android:textSize">16sp</item>
         <item name="fontFamily">@font/montserrat_regular</item>
+        <item name="android:fontFamily">@font/montserrat_regular</item>
+    </style>
+
+    <style name="Regular16" parent="AppTheme">
+        <item name="android:textSize">16sp</item>
+        <item name="fontFamily">@font/montserrat_regular</item>
+        <item name="color">@color/black</item>
     </style>
 
 
