--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -191,6 +191,7 @@
             android:layout_marginTop="36dp"
             android:layout_marginEnd="16dp"
             android:text="@string/online_education"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/rvChallenge" />
@@ -201,6 +202,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:visibility="gone"
             android:layout_marginEnd="16dp"
             android:orientation="horizontal"
             android:overScrollMode="never"
