--- a/app/src/main/res/layout/fragment_promocode.xml
+++ b/app/src/main/res/layout/fragment_promocode.xml
@@ -84,15 +84,17 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnNext"
+            style="@style/PrimaryButton.Full"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="57dp"
-            android:background="@drawable/bg_blue_button"
+            android:enabled="false"
             android:fontFamily="@font/montserrat_regular"
             android:text="@string/txt_send"
+            android:textAllCaps="true"
             android:textColor="@color/white"
             android:textSize="17sp" />
     </RelativeLayout>
