--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,6 +7,14 @@
         <item name="android:textColor">@color/blackText</item>
     </style>
 
+    <style name="PrimaryButton.Full" parent="AppTheme">
+        <item name="android:fontFamily">@font/montserrat_regular</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@drawable/primary_button_bg</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
     <style name="FullScreen" parent="AppTheme">
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowActionBar">false</item>
